--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </body>
 <script>
   docsify.$window = {
-    loadSidebar: true
+    loadSidebar: true,
+    coverpage: true
   }
 </script>
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
