--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <script>
   docsify.$window = {
     loadSidebar: true,
-    coverpage: true
+    loadSidebar: '_sidebar.md',
+    coverpage: true,
+    coverpage: '_coverpage.md'
   }
 </script>
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
