--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <title>SunTalk Page</title>
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
-</head>
-<body>
-  <div id="app">加载内容中...</div>
-</body>
-<script>
-  docsify.$window = {
-    loadSidebar: true,
-    loadSidebar: '_sidebar.md',
-    coverpage: true,
-    coverpage: '_coverpage.md'
-  }
-</script>
+  <head>
+    <meta charset="UTF-8">
+    <title>SunTalk Page</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
+  </head>
+
+  <body>
+    <div id="app">....</div>
+  </body>
+
+  <script>
+    docsify.$window = {
+      repo: 'https://github.com/sunbossrs/suntalk_save',
+      loadSidebar: true,
+      coverpage: true,
+    }
+  </script>
+
 <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
 <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
 <script src="//cdn.jsdelivr.net/npm/prismjs/components/prism-bash.min.js"></script>
