--- a/index.html
+++ b/index.html
@@ -12,30 +12,13 @@
   </head>
 
   <body>
-    <div id="app">....</div>
+    <div id="app"></div>
   </body>
 
   <script>
     docsify.$window = {
       repo: 'https://github.com/sunbossrs/suntalk_save',
     }
-  </script>
-
-  <script>
-    new Vue({
-      el: '#vssue',
-      render: h => h('Vssue', {
-        props: {
-          title: 'SunTalk',
-          options: {
-            owner: 'SunbossRS',
-            repo: 'SunTalk_Save',
-            clientId: '800a929ad18c8e90fdbc',
-            clientSecret: '3dcb1cc3680b9b85ad4291367b4aafefd6806e58',
-          },
-        }
-      })
-    })
   </script>
 
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
